--- a/DiffuserStick/website/help.html
+++ b/DiffuserStick/website/help.html
@@ -13,6 +13,7 @@
 
         <h1>저작권</h1>
 
-        <p>사진</p>
+        <h4>아이콘</h4>
+        <div><strong>Aromatic</strong> Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </body>
 </html>
