--- a/DiffuserStick/website/help.html
+++ b/DiffuserStick/website/help.html
@@ -23,6 +23,7 @@
             <li>기본 설정 기간: 일반적으로 권장되는 교체 주기인 30일로 기본 설정되어 있습니다. 15일 단위로 변경할 수 있습니다.
             <li>디퓨저 추가: 제목과 사진(권한 허용 필요), 메모 및 설치 날짜를 설정할 수 있습니다. 설치일로부터 교체 주기가 되면 푸시 알람(권한 허용 필요) 메시지를 통해 교체일을 알려줍니다.
             <li>디퓨저 자세히 보기: 목록의 디퓨저를 클릭하면 디퓨저의 자세한 정보를 볼 수 있습니다. 디퓨저 스틱을 교체하고 [교체] 버튼을 누르면 교체일이 오늘 날짜로 업데이트됩니다. [보관] 기능을 이용해 보관함에 보관할 수 있습니다. [수정], [삭제] 기능을 통해 정보를 수정하거나 삭제할 수 있습니다.
+            <li>인 앱 결제: 앱에서 표시되는 모든 광고를 제거할 수 있는 인앱결제 상품을 구입할 수 있습니다. 앱의 재설치 등으로 결제정보 복원이 필요한 경우 [구입 정보 복원] 버튼을 누르면 이전 결제 내역을 복원할 수 있습니다.
         </ul>
         
         <h1>제작자</h1>
