Design: change cell highlight color - Chore: adjus help html style

--- a/DiffuserStick/website/help_en.html
+++ b/DiffuserStick/website/help_en.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>DiffuserStick Help</title>
 <style>
-  body { padding: 10px; }
-  li { margin-bottom: 8px; line-height: 1.6; }
+  body { padding: 10px; line-height: 1.6; }
+  li { margin-bottom: 8px;  }
 </style>
 </head>
 <body>
@@ -23,7 +23,14 @@
 <li>Archive Tab: Diffusers you no longer use can be stored using the [Archive] feature.</li>
 <li>Default Period: The default replacement cycle is set to 30 days. You can change it in 15-day increments.</li>
 <li>Add Diffuser: Set the title, photo (permission required), memo, and installation date. When the replacement period is reached, a push notification (permission required) will notify you.</li>
-<li>Diffuser Details: Tap a diffuser in the list to view detailed information. After replacing the sticks, tap the [Replace] button to update the replacement date to today. You can also use [Archive], [Edit], and [Delete] functions.</li>
+<li>Diffuser Details: Tap a diffuser in the list to view detailed information.
+  <ul>
+    <li>Tap on the image to view it full screen and enlarge it.</li>
+    <li>After replacing the sticks, tap the [Replace] button to update the replacement date to today.</li>
+    <li>You can also use [Archive], [Edit], and [Delete] functions.</li>
+    <li>The [Share] icon allows you to save the image or send the diffuser contents to an external service.</li>
+  </ul>
+</li>
 <li>In-App Purchase: You can purchase a product that removes all advertisements from the app. If you need to restore purchases (e.g., after reinstalling), tap the [Restore Purchases] button.</li>
 </ul>
 
