--- a/DiffuserStick/website/help_ja.html
+++ b/DiffuserStick/website/help_ja.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>DiffuserStick ヘルプ</title>
 <style>
-  body { padding: 10px; }
-  li { margin-bottom: 8px; line-height: 1.6; }
+  body { padding: 10px;  line-height: 1.6; }
+  li { margin-bottom: 8px; }
 </style>
 </head>
 <body>
@@ -23,7 +23,15 @@
 <li>保管タブ：使用しなくなったディフューザーは［保管］機能を使って保管できます。</li>
 <li>基本設定期間：推奨交換周期である30日が初期設定です。15日単位で変更できます。</li>
 <li>ディフューザー追加：タイトル、写真（許可が必要）、メモ、設置日を設定できます。設置日から交換周期になると、プッシュ通知（許可が必要）でお知らせします。</li>
-<li>ディフューザー詳細：一覧から選択すると詳細情報を確認できます。スティックを交換して［交換］ボタンを押すと交換日が本日に更新されます。［保管］、［編集］、［削除］機能も利用できます。</li>
+<!--<li>ディフューザー詳細：一覧から選択すると詳細情報を確認できます。スティックを交換して［交換］ボタンを押すと交換日が本日に更新されます。［保管］、［編集］、［削除］機能も利用できます。</li>-->
+<li>ディフューザー詳細：一覧からディフューザーをタップすると詳細情報を確認できます。
+  <ul>
+    <li>画像をタップすると全画面表示され、拡大して確認できます。</li>
+    <li>スティックを交換して［交換］ボタンを押すと、交換日が本日に更新されます。</li>
+    <li>［保管］、［編集］、［削除］機能を利用できます。</li>
+    <li>［共有］アイコンを使用して、画像を保存したり、ディフューザー内容を外部サービスへ送信できます。</li>
+  </ul>
+</li>
 <li>アプリ内課金：アプリ内の広告をすべて削除できる商品を購入できます。再インストール時などに復元が必要な場合は［購入の復元］を押してください。</li>
 </ul>
 
